// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders children when supplied 1`] = `
<button
  aria-hidden="false"
  aria-label="Close"
  onClick={[Function]}
  onKeyDown={[Function]}
  type="button"
>
  Unit test child element
</button>
`;

exports[`renders the correct tree 1`] = `
<button
  aria-hidden="false"
  aria-label="Close"
  onClick={[Function]}
  onKeyDown={[Function]}
  type="button"
/>
`;
